Add create invitation function
